--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,13 @@ img{
 
 /*layout*/
 
+.container{
+    max-width: 768px;
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+}
+
+.grid{
+    display: grid;
+    gap: 1.5rem;
+}
