--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,19 @@ img{
     z-index: var(--z-fixed);
     background-color: var(--body-color);
 }
+
+/* nav */
+
+.nav{
+    max-width: 968px;
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav_logo,
+.nav_toggle{
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+}
