--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ img{
 @media screen and (max-width: 767px){
     .nav_menu{
         position: fixed;
-        bottom: 0;
+        bottom: -100%;
         left: 0;
         width: 100%;
         background-color: var(--body-color);
@@ -215,3 +215,6 @@ img{
 .nav_close:hover{
     color: var(--first-color-alt);
 }
+
+
+/* SHOW MENU */
