--- a/css/style.css
+++ b/css/style.css
@@ -231,4 +231,20 @@ img{
 .home_content{
     grid-template-columns: .5fr 3fr;
     padding-top: 3.5rem;
+    align-items: center;
+}
+
+.home_social{
+    display: grid;
+    grid-template-columns: max-content;
+    row-gap: 1rem;
+}
+
+.home_social-icon{
+    font-size: 1.25rem;
+    color: var(--text-color);
+}
+
+.home_social-icon:hover{
+    color: var(--first-color-alt)
 }
