--- a/css/style.css
+++ b/css/style.css
@@ -248,3 +248,31 @@ img{
 .home_social-icon:hover{
     color: var(--color-icons);
 }
+
+.home_blob{
+    width: 200px;
+    fill: var(--first-color);
+}
+
+.home_blob-img{
+    width: 170px;
+}
+
+.home_data{
+    grid-column: 1/3;
+}
+
+.home_title{
+    font-size: var(--h3-font-size);
+}
+
+.home_subtitle{
+    font-size: var(--h3-font-size);
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-0-75);
+}
+
+.home_description{
+    margin-bottom: var(--mb-2);
+}
