--- a/css/style.css
+++ b/css/style.css
@@ -276,3 +276,11 @@ img{
 .home_description{
     margin-bottom: var(--mb-2);
 }
+
+.home_scroll{
+    /* display: none; */
+}
+
+.home_scroll-button{
+    color: var(--text-color);
+}
