commit skills css

--- a/css/style.css
+++ b/css/style.css
@@ -372,3 +372,15 @@ img{
     display: flex;
     justify-content: center;
 }
+
+/* skills */
+.skills_container{
+    row-gap: 0;
+}
+
+.skills_header{
+    display: flex;
+    align-items: center;
+    margin-bottom: var(--mb-2-5);
+    cursor: pointer;
+}
