--- a/css/style.css
+++ b/css/style.css
@@ -384,3 +384,17 @@ img{
     margin-bottom: var(--mb-2-5);
     cursor: pointer;
 }
+
+.skills_icon,
+.skills_arrow{
+    font-size: 2rem;
+    color: var(--text-color-light);
+}
+
+.skills_icon{
+    margin-right: var(--mb-0-75);
+}
+
+.skills_title{
+    font-size: var(--h3-font-size);
+}
