--- a/css/style.css
+++ b/css/style.css
@@ -398,3 +398,20 @@ img{
 .skills_title{
     font-size: var(--h3-font-size);
 }
+
+.skills_subtitle{
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
+}
+
+.skills_arrow{
+    margin-left: auto;
+    transition: .4s;
+}
+
+.skills_titles{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--mb-0-5);
+}
+
