--- a/css/style.css
+++ b/css/style.css
@@ -438,3 +438,15 @@ img{
 .skills_html{
     width: 90%;
 }
+
+.skills_css{
+    width: 80%;
+}
+
+.skills_js{
+    width: 50%;
+}
+
+.skills_angular{
+    width: 30%;
+}
