commit skills css 4

--- a/css/style.css
+++ b/css/style.css
@@ -450,3 +450,18 @@ img{
 .skills_angular{
     width: 30%;
 }
+
+.skills_c{
+    width: 80%;
+}
+
+.skills_node{
+    width: 50%;
+}
+.skills_bd{
+    width: 60%;
+}
+
+.skills_java{
+    width: 10%;
+}
