--- a/css/style.css
+++ b/css/style.css
@@ -470,3 +470,12 @@ img{
     height: 0;
     overflow: hidden;
 }
+
+.skills_open .skills_list{
+    height: max-content;
+    margin-bottom: var(--mb-2-5);
+}
+
+.skills_open .skills_arrow{
+    
+}
