--- a/css/style.css
+++ b/css/style.css
@@ -479,3 +479,18 @@ img{
 .skills_open .skills_arrow{
     transform: rotate(-180deg);
 }
+
+
+/* qualification */
+
+.qualification_tabs{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--mb-2);
+}
+
+.qualification_button{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    cursor: pointer;
+}
