--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     --body-color: hsl(266, 32%, 64%);
     --container-color: #FFF;
     --color-icons: hsl(250, 26%, 44%);
+    --color-icons2: hsl(250, 27%, 36%);
 
     --body-font: 'Poppins', sans-serif;
 
@@ -493,4 +494,51 @@ img{
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
     cursor: pointer;
+}
+
+.qualification_button:hover{
+    color: var(--color-icons);
+}
+
+.qualification_icon{
+    font-size: 1.8rem;
+    margin-right: var(--mb-0-25);
+}
+
+.qualification_data{
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+}
+
+.qualification_title{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+}
+
+.qualification_subtitle{
+    display: inline-block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-1);
+}
+
+.qualification_calendar{
+    font-size: var(--smaller-font-size);
+    color: var(--text-color-light);
+}
+
+.qualification_rounder{
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background-color: var(--color-icons2);
+    border-radius: 50%;
+}
+
+.qualification_line{
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: var(--color-icons2);
+    transform: translate(6px, -7px);
 }
