--- a/css/style.css
+++ b/css/style.css
@@ -550,3 +550,7 @@ img{
 .qualification_active[data-content]{
     display: block;
 }
+
+.qualification_button.qualification_active{
+    color: var(--color-icons2);
+}
